welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:22: error: not found: value x
	setPos(x+1,0)	
               ^